--- a/config/database.yml
+++ b/config/database.yml
@@ -11,9 +11,11 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_bin
   pool: 5
-  username: root
+  username: proto_app
   password:
   socket: /tmp/mysql.sock
 
